Fixed wrapping text in stat columns.

--- a/app/assets/pages/home.less
+++ b/app/assets/pages/home.less
@@ -6,5 +6,8 @@
         font-weight: bold;
       }
     }
+    .td-stat {
+      white-space: nowrap;
+    }
   }
 }
